--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,22 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Tests
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      DB_PASS: ${{ secrets.GITHUB_TOKEN }}
+      # Используем отдельный секрет для MariaDB root-пароля
+      DB_PASS: ${{ secrets.DB_ROOT_PASSWORD }}
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v5
+      - name: Checkout repository
+        uses: actions/checkout@v5
   
       - name: Set masked outputs
         run: echo "::add-mask::$DB_PASS"
@@ -38,10 +29,10 @@ jobs:
       - name: Terraform Init
         run: terraform init
       
-      - name: Check Terraform Config
-        run: terraform plan
+      - name: Terraform Plan
+        run: terraform plan -var="db_root_password=$DB_PASS"
       
-      - name: Run Terraform
+      - name: Terraform Apply
         run: terraform apply -var="db_root_password=$DB_PASS" -auto-approve
       
       - name: Check Web Container 
@@ -65,4 +56,4 @@ jobs:
         run: mysql -h 127.0.0.1 -u root -p$DB_PASS -e 'select version();'
   
       - name: Stop Containers 
-        run: docker stop $(docker ps -q)  
+        run: docker stop $(docker ps -q)
